--- a/MovilParaiso/app/src/main/res/values/strings.xml
+++ b/MovilParaiso/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MovilParaiso</string>
+    <string name="muni_paraiso">MUNICIPALIDAD\n DE PARAÍSO</string>
+    <string name="login">iniciar sesión</string>
+    <string name="registrarse">registrarse</string>
 </resources>
