Set main to open login activity

--- a/MovilParaiso/app/src/main/res/values/strings.xml
+++ b/MovilParaiso/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="muni_paraiso">MUNICIPALIDAD\n DE PARAÍSO</string>
     <string name="login">iniciar sesión</string>
     <string name="registrarse">registrarse</string>
+    <string name="escudo">escudo municipalidad</string>
 </resources>
